Updated Resume. Fixed bug involving project description to overflow on mobile. Cleaned code syntax.

--- a/src/style.css
+++ b/src/style.css
@@ -37,16 +37,16 @@ body {
     border: solid 2px #ffab00;
     background-color: #ffab00;
     border-radius: 2rem;
-    transition: all .2s ease-in-out;
-    -webkit-transition: all .2s ease-in-out;
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
 }
+/* Animation */
 .nav-item:hover {
     cursor: pointer;
     background: #6e07f3;
     color: #000;
 }
-
-/* Navigation Links */
+/* Navigation Link (Button) */
 .nav-link {
     height: 54px;
     width: 154px;
@@ -56,9 +56,11 @@ body {
     border-radius: 2rem;
     text-decoration: none;
 }
+/* Animation */
 .nav-link:hover {
     color: #fff;
 }
+/* Button Title (Resume) */
 .nav-links-title {
     margin: 0;
     border-radius: 2rem;
@@ -73,28 +75,27 @@ body {
 /*===========================================================================*/
 /*===========================================================================*/
 /* MAIN CONTENT */
+/* Main Div */
 .home-description-div {
     width: 100%;
     color: #fff;
     text-align: center;
     font-size: 16px;
 }
+/* Main Title (Frontend Developer) */
 .home-title {
-    color: #fff;
     font-size: 3em;
     font-family: 'K2D', sans-serif;
     letter-spacing: 2px;
 }
-.home-skills {
-    color: #fff;
-}
+/* Name Introduction (Mason Galat) */
 .home-name {
     font-size: 2.2rem;
     font-family: 'K2D', sans-serif;
 }
+/* Detailed Personal Description */
 .home-description {
     margin: 0% auto;
-    text-align: center;
     line-height: 1.6em;
     word-spacing: 2px;
     letter-spacing: -1px;
@@ -116,6 +117,7 @@ body {
     align-items: center;
     justify-content: center;
 }
+/* Title Labeled 'Projects' */
 .middle-title {
     color: #000;
     font-size: 2.5em;
@@ -131,38 +133,35 @@ body {
     background-color: #fafafa;
     width: 100%;
 }
-
+/* Each Individual Project */
 .project {
     color: #141c3a;
     border-radius: 0.8rem;
     margin: 0 auto;
 }
-
+/* Image (GIF) */
 .project-img {
     border-radius: 0.8rem;
     margin: auto;
 }
-
+/* Div of Project Details */
 .project-details {
     text-align: center;
     margin: auto;
     position: relative;
-}
-
+}/* Title */
 .project-title {
-    text-align: center;
     position: relative;
     font-family: 'K2D', sans-serif;
 }
-
+/* Description */
 .project-description {
-    text-align: center;
-    align-content: center;
     line-height: 1.6em;
-    word-spacing: 1px;
+    word-spacing: 2px;
     letter-spacing: -1px;
+    vertical-align: middle;
 }
-
+/* Project Button (Link) */
 .project-button{
     background: #6e07f3;
     border: none;
@@ -179,6 +178,7 @@ body {
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
 }
+/* Animations */
 .project-button:hover{
     margin-top: 2px;
     border-bottom-width: 3px;
@@ -300,8 +300,8 @@ body {
 /*===========================================================================*/
 /*===========================================================================*/
 /* Scaling for Responsiveness*/
+/* FOR MOBILE*/
 @media only screen and (min-width: 30px) and (max-width: 849px) {
-    /* For Mobile*/
     .homebody {
         background-size: cover;
     }
@@ -351,7 +351,7 @@ body {
         height: 440px;
         width: 85%;
         padding: 3%;
-        margin-bottom: 60px;
+        margin-bottom: 66px;
         text-align: center;
     }
     .project-img {
@@ -373,15 +373,18 @@ body {
         margin: 10px 0;
     }
     .project-description {
-        height: 60px;
+        max-height: 90px;
+        min-height: 62px;
         width: 100%;
         font-size: 1.2rem;
         margin: 20px auto;
+        position: relative;
+        text-align: center;
     }
 }
 
+/* FOR DESKTOP */
 @media only screen and (min-width: 850px) {
-    /* For desktop: */
     .homebody {
         background-size: cover;
     }
@@ -445,12 +448,14 @@ body {
     }
     .project-title {
         font-size: 2.2rem;
-        margin: 20px 0;
+        margin: 0;
     }
     .project-description {
-        height: 80px;
+        height: 100px;
         width: 80%;
         font-size: 1.4rem;
-        margin: 24px auto;
+        margin: 16px auto;
+        padding: 16px;
+        display: table-cell;
     }
 }
